# neuralSubdiv

./: .gitignore  .gitmodules  README.md  genTrainData_slow.m
base_implementation/utils_matlab/: lscmOneRing.m
dataGen/: .gitmodules  CMakeLists.txt  README.md
dataGen/src/: GenData.cpp  RandomDecimation.cpp  RandomDecimation.h  TestViewer.cpp  Utils.h
data_gen/: CMakeLists.txt  README.md
data_gen/src/: CMakeLists.txt  GenData.cpp  RandomDecimation.cpp  RandomDecimation.h  Test.cpp  Test.h  TestViewer.cpp  TestViewer.h  Upsample.cpp  Upsample.h  Utils.cpp  Utils.h
dataset/: convert_to_obj.py
